Added doctor profile section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,11 @@ a:hover {
     color: #000000;
     text-decoration: none;
 }
+.btn{
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 3rem;
+}
 
 h1,
 h2,
@@ -702,4 +707,113 @@ section {
 }
 .text-green{
     color: #89cc90;
+}
+.appointment-form {
+    padding: 20px 38px;
+    border-top: 2px solid #1c1c1c;
+    background-color: #ffffff;
+    box-shadow: 1px 3px 5px 1px #c1c1c175;
+    border-radius: 10px;
+}
+.doctor-public-slider{
+    background-image: url('../img/pet.jpg');
+    background-size: cover;
+    background-position: center;
+    min-height: 500px;
+    padding: 60px 0;
+    margin-top: 7.5rem;
+    position: relative;
+    z-index: 1;
+}
+.doctor-public-slider::before{
+    content: '';
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    opacity: 0.5;
+    position: absolute;
+    left: 0;
+    top:0;
+    z-index: 0;
+}
+.slider-text-section{
+    min-height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.doctor-profile-card{
+    border-radius: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 15px #0002;
+    margin-top: -120px;
+    position: relative;
+    z-index: 5;
+    overflow: hidden;
+    border: 1px solid #e1e1e1;
+}
+.d-profile-sidebar,.d-profile-main{
+    height: 100%;
+}
+.d-profile-main{
+    padding: 20px 20px 20px 8px;
+}
+.d-profile-sidebar{
+    background-color: #f6f6f6;
+    border-right: 1px solid #e1e1e1;
+    padding: 20px;
+}
+.d-profile-sidebar img{
+    border-radius: 8px;
+    border: 1px solid #e1e1e1;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+.doctor-profile{
+    overflow: visible !important;
+    padding-bottom: 0;
+}
+.doctor-profile-social-icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap ;
+}
+.doctor-profile-social-icons a{
+    height: 2rem;
+    width: 2rem;
+    display: flex;
+    align-items: center;
+    line-height: 1;
+    justify-content: center;
+    font-size: 0.9rem;
+    background-color: #eee;
+    border:1px solid #ddd;
+    border-radius: 50%;
+    color: #89cc90;
+}
+.doctor-profile-social-icons a:hover{
+    background-color: #89cc90;
+    color: #fff;
+    border-color: #89cc90;
+}
+.doctor-profile-social-icons a i{
+    margin-top: 2px;
+}
+
+@media screen and (max-width:767px) {
+    .doctor-public-slider,.slider-text-section{
+        min-height: unset;
+    }
+    .doctor-profile-card{
+        margin-top: -100px;
+    }
+    .doctor-profile-social-icons a i{
+        margin-top: 0;
+    }
+    .d-profile-main{
+        padding: 20px 20px 20px 20px;
+    }
 }
